--- a/solve.html
+++ b/solve.html
@@ -83,7 +83,7 @@
     <!--Music-->
     <div>
         <audio controls autoplay loop>
-            <source src="/Train_Systems/audio/044. Winter Horns.mp3" type="audio/mpeg">
+            <!--<source src="/Train_Systems/audio/044. Winter Horns.mp3" type="audio/mpeg">-->
         </audio>
     </div>
     <!--Footer: Copyright-->
